--- a/about.html
+++ b/about.html
@@ -1,6 +1,6 @@
 ---
 layout: default
 title: About Wei
-banner-image: /assets/img/about.jpg
+banner-image: /assets/img/about-bg.jpg
 ---
 <p>About me</p>
