--- a/contact.html
+++ b/contact.html
@@ -3,3 +3,9 @@ layout: default
 title: Contact
 ---
 <p>contact me</p>
+
+<form action="https://formspree.io/noreply@testharder.net" method="POST">
+    <input type="text" name="name">
+    <input type="email" name="_replyto">
+    <input type="submit" value="Send">
+</form>
