--- a/contact.html
+++ b/contact.html
@@ -5,8 +5,32 @@ banner-image: /assets/img/contact-bg.jpg
 ---
 <p>contact me</p>
 
-<form action="https://formspree.io/noreply@testharder.net" method="POST">
-    <input type="text" name="name">
-    <input type="email" name="_replyto">
-    <input type="submit" value="Send">
+<p>Want to get in touch? Fill out the form below to send me a message and I will get back to you as soon as possible!</p>
+
+<form name="sentMessage" id="contactForm" action="https://formspree.io/noreply@testharder.net" method="POST">
+    <div class="control-group">
+        <div class="form-group floating-label-form-group controls">
+            <label>Name</label>
+            <input type="text" class="form-control" placeholder="Name" id="name" required >
+            <p class="help-block text-danger"></p>
+        </div>
+    </div>
+    <div class="control-group">
+        <div class="form-group floating-label-form-group controls">
+            <label>Email Address</label>
+            <input type="email" class="form-control" placeholder="Email Address" id="email" required >
+            <p class="help-block text-danger"></p>
+        </div>
+    </div>
+    <div class="control-group">
+        <div class="form-group floating-label-form-group controls">
+            <label>Message</label>
+            <textarea rows="5" class="form-control" placeholder="Message" id="message" required ></textarea>
+            <p class="help-block text-danger"></p>
+        </div>
+    </div>
+    <br>
+    <div class="form-group">
+        <button type="submit" class="btn btn-primary" id="sendMessageButton">Send</button>
+    </div>
 </form>
