--- a/contact.html
+++ b/contact.html
@@ -3,7 +3,6 @@ layout: default
 title: Contact
 banner-image: /assets/img/contact-bg.jpg
 ---
-<p>contact me</p>
 
 <p>Want to get in touch? Fill out the form below to send me a message and I will get back to you as soon as possible!</p>
 
@@ -11,26 +10,27 @@ banner-image: /assets/img/contact-bg.jpg
     <div class="control-group">
         <div class="form-group floating-label-form-group controls">
             <label>Name</label>
-            <input type="text" class="form-control" placeholder="Name" id="name" required >
+            <input type="text" class="form-control" placeholder="Name" id="name" name="name" required >
             <p class="help-block text-danger"></p>
         </div>
     </div>
     <div class="control-group">
         <div class="form-group floating-label-form-group controls">
             <label>Email Address</label>
-            <input type="email" class="form-control" placeholder="Email Address" id="email" required >
+            <input type="email" class="form-control" placeholder="Email Address" id="email" name="email" required >
             <p class="help-block text-danger"></p>
         </div>
     </div>
     <div class="control-group">
         <div class="form-group floating-label-form-group controls">
             <label>Message</label>
-            <textarea rows="5" class="form-control" placeholder="Message" id="message" required ></textarea>
+            <textarea rows="5" class="form-control" placeholder="Message" id="message" name="message" required ></textarea>
             <p class="help-block text-danger"></p>
         </div>
     </div>
     <br>
     <div class="form-group">
         <button type="submit" class="btn btn-primary" id="sendMessageButton">Send</button>
+        <input type="hidden" name="_next" value="https://givemepower8.github.io/contact"/>
     </div>
 </form>
