--- a/about.html
+++ b/about.html
@@ -3,4 +3,5 @@ layout: default
 title: About Wei
 banner-image: /assets/img/about-bg.jpg
 ---
-<p>About me</p>
+
+<img src="/assets/img/Wei_Emoji.gif" class="rounded-circle" alt="Wei_Emoji">
