--- a/about.html
+++ b/about.html
@@ -6,4 +6,4 @@ banner-image: /assets/img/about-bg.jpg
 
 <img src="/assets/img/Wei_Emoji.gif" class="rounded-circle" alt="Wei_Emoji">
 
-Best ways to learn is to practice, write and teach.
+<p>Best ways to learn is to practice, write and teach.</p>
