--- a/about.html
+++ b/about.html
@@ -4,6 +4,8 @@ title: About Wei
 banner-image: /assets/img/about-bg.jpg
 ---
 
-<img src="/assets/img/Wei_Emoji.gif" class="rounded-circle" alt="Wei_Emoji">
+<p>Technologies evolve fast. I have a vast range of interests in web technologies, back-end and front-end. Best ways to
+    keep up with is to practice, write and teach. Github is my test-bed and GitHub Pages is the place I write
+    technical notes. I hope you can learning something new with me everyday.</p>
 
-<p>Best ways to learn is to practice, write and teach.</p>
+<img src="/assets/img/Wei_Emoji.gif" class="rounded-circle" alt="Wei_Emoji">
