--- a/about.html
+++ b/about.html
@@ -5,7 +5,7 @@ banner-image: /assets/img/about-bg.jpg
 ---
 
 <p>Technologies evolve fast. I have a vast range of interests in web technologies, back-end and front-end. Best ways to
-    keep up with is to practice, write and teach. Github is my test-bed and GitHub Pages is the place I write
-    technical notes. I hope you can learning something new with me everyday.</p>
+    keep up with is to practice, write and teach. Github is my test-bed for new things and GitHub Pages is the place I
+    write technical notes. I hope you can learn something new with me everyday.</p>
 
 <img src="/assets/img/Wei_Emoji.gif" class="rounded-circle" alt="Wei_Emoji">
