add linkedin badge

--- a/about.html
+++ b/about.html
@@ -8,4 +8,6 @@ banner-image: /assets/img/about-bg.jpg
     keep up with is to practice, write and teach. Github is my test-bed for new things and GitHub Pages is the place I
     write technical notes. I hope you can learn something new with me everyday.</p>
 
-<img src="/assets/img/Wei_Emoji.gif" class="rounded-circle" alt="Wei_Emoji">
+<div class="LI-profile-badge" data-version="v1" data-size="medium" data-locale="en_US" data-type="vertical" data-theme="dark"
+    data-vanity="wei-wang-554b862b"><a class="LI-simple-link" href='https://ca.linkedin.com/in/wei-wang-554b862b?trk=profile-badge'>Wei
+        Wang</a></div>
